--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mocks service test",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
   "homepage": "https://github.com/juanloaiza21/mocks-service-test#readme",
   "dependencies": {
     "json-server": "^0.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
